--- a/CLOVER/config.plist
+++ b/CLOVER/config.plist
@@ -251,7 +251,7 @@
 	<key>Boot</key>
 	<dict>
 		<key>Arguments</key>
-		<string>-igfxdump kext-dev-mode=1</string>
+		<string>dart=0 -disablegfxfirmware</string>
 		<key>Debug</key>
 		<true/>
 		<key>DefaultVolume</key>
